Moved some info around

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 
             my_links = {
                 'Download client from Github': ['https://github.com/pepperpow/smb2-door-randomizer/releases'],
-                'Source code': ['https://github.com/pepperpow/smb2-door-randomizer'],
-                'Discord Link': ['https://discord.gg', 'gNXANyV']
+                'Source code': ['https://github.com/pepperpow/smb2-door-randomizer']
             }
             my_desc = {
                 'README': './README.md',
